feat: java 25