@@ -68,8 +68,8 @@ class ProductServiceIntegrationTest {
         // Then
         assertThat(products).hasSize(2);
         assertThat(products.getFirst().id()).isEqualTo("1");
-        assertThat(products.get(0).name()).isEqualTo("Google Pixel 6 Pro");
-        assertThat(products.get(0).data()).containsEntry("color", "Cloudy White");
+        assertThat(products.getFirst().name()).isEqualTo("Google Pixel 6 Pro");
+        assertThat(products.getFirst().data()).containsEntry("color", "Cloudy White");
         assertThat(products.get(1).id()).isEqualTo("2");
         assertThat(products.get(1).name()).isEqualTo("Apple iPhone 12 Mini");
 
